--- a/tournaments/wc2021/info.html
+++ b/tournaments/wc2021/info.html
@@ -540,6 +540,207 @@
                 </table>
             </div>
           </div>
-      </div>
+    </div>
+
+    <hr class="ruler">
+
+    <div class="container">
+      <p class="round-title" style="text-align: left;">SCHEDULE</p>
+      <div class="row justify-content-center">
+        <div class="col-sm">
+          <table class="table">
+            <thead>
+              <tr>
+                <th>DATE</th>
+                <th>STAGE</th>
+                <th>GROUP</th>
+                <th>MATCH</th>
+                <th>WINNER</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>        
+                <td>Jan 2nd</td>
+                <td>Group</td>
+                <td>A</td>
+                <td>USA vs ITA</td>
+                <td></td>
+              </tr>
+              <tr>        
+                <td>Jan 2nd</td>
+                <td>Group</td>
+                <td>B</td>
+                <td>CHN vs MEX</td>
+                <td></td>
+              </tr>
+
+              <tr>        
+                <td>Jan 6th</td>
+                <td>Group</td>
+                <td>C</td>
+                <td>AUS vs IND</td>
+                <td></td>
+              </tr>
+              <tr>        
+                <td>Jan 6th</td>
+                <td>Group</td>
+                <td>D</td>
+                <td>JAP vs SWE</td>
+                <td></td>
+              </tr>
+
+              <tr>        
+                <td>Jan 11th</td>
+                <td>Group</td>
+                <td>A</td>
+                <td>KOR vs BRA</td>
+                <td></td>
+              </tr>
+              <tr>        
+                <td>Jan 11th</td>
+                <td>Group</td>
+                <td>B</td>
+                <td>ENG vs FRA</td>
+                <td></td>
+              </tr>
+
+              <tr>        
+                <td>Jan 15th</td>
+                <td>Group</td>
+                <td>C</td>
+                <td>HUN vs SPA</td>
+                <td></td>
+              </tr>
+              <tr>        
+                <td>Jan 15th</td>
+                <td>Group</td>
+                <td>D</td>
+                <td>CAN vs ISR</td>
+                <td></td>
+              </tr>
+
+              <tr>        
+                <td>Jan 19th</td>
+                <td>Group</td>
+                <td>A</td>
+                <td>USA vs KOR</td>
+                <td></td>
+              </tr>
+              <tr>        
+                <td>Jan 19th</td>
+                <td>Group</td>
+                <td>B</td>
+                <td>FRA vs MEX</td>
+                <td></td>
+              </tr>
+
+              <tr>        
+                <td>Jan 24th</td>
+                <td>Group</td>
+                <td>C</td>
+                <td>AUS vs HUN</td>
+                <td></td>
+              </tr>
+              <tr>        
+                <td>Jan 24th</td>
+                <td>Group</td>
+                <td>D</td>
+                <td>ISR vs SWE</td>
+                <td></td>
+              </tr>
+
+              <tr>        
+                <td>Jan 28th</td>
+                <td>Group</td>
+                <td>A</td>
+                <td>ITA vs BRA</td>
+                <td></td>
+              </tr>
+              <tr>        
+                <td>Jan 28th</td>
+                <td>Group</td>
+                <td>B</td>
+                <td>ENG vs CHN</td>
+                <td></td>
+              </tr>
+
+              <tr>        
+                <td>Feb 03rd</td>
+                <td>Group</td>
+                <td>C</td>
+                <td>IND vs SPA</td>
+                <td></td>
+              </tr>
+              <tr>        
+                <td>Feb 03rd</td>
+                <td>Group</td>
+                <td>D</td>
+                <td>CAN vs JAP</td>
+                <td></td>
+              </tr>
+
+              <tr>        
+                <td>Feb 07th</td>
+                <td>Group</td>
+                <td>A</td>
+                <td>ITA vs KOR</td>
+                <td></td>
+              </tr>
+              <tr>        
+                <td>Feb 07th</td>
+                <td>Group</td>
+                <td>B</td>
+                <td>FRA vs CHN</td>
+                <td></td>
+              </tr>
+
+              <tr>        
+                <td>Feb 12th</td>
+                <td>Group</td>
+                <td>C</td>
+                <td>IND vs HUN</td>
+                <td></td>
+              </tr>
+              <tr>        
+                <td>Feb 12th</td>
+                <td>Group</td>
+                <td>D</td>
+                <td>ISR vs JAP</td>
+                <td></td>
+              </tr>
+
+              <tr>        
+                <td>Feb 16th</td>
+                <td>Group</td>
+                <td>A</td>
+                <td>USA vs BRA</td>
+                <td></td>
+              </tr>
+              <tr>        
+                <td>Feb 16th</td>
+                <td>Group</td>
+                <td>B</td>
+                <td>ENG vs MEX</td>
+                <td></td>
+              </tr>
+
+              <tr>        
+                <td>Feb 24th</td>
+                <td>Group</td>
+                <td>C</td>
+                <td>AUS vs SPA</td>
+                <td></td>
+              </tr>
+              <tr>        
+                <td>Feb 24th</td>
+                <td>Group</td>
+                <td>D</td>
+                <td>CAN vs SWE</td>
+                <td></td>
+              </tr>
+
+            </tbody>
+          </table>
+        </div>
 
  </body>
