added anchor tags

--- a/tournaments/wc2021/info.html
+++ b/tournaments/wc2021/info.html
@@ -43,6 +43,7 @@
     <br>
 
     <div class="container">
+        <a id="teams" href="#teams" style="text-align: left;"></a>
         <p class="round-title" style="text-align: left;">TEAMS</p>
         <div class="row justify-content-center">
           <div class="col-sm">
@@ -544,8 +545,9 @@
 
     <hr class="ruler">
 
-    <div class="container">
-      <p class="round-title" style="text-align: left;">SCHEDULE</p>
+    <div  class="container">
+      <a id="schedule" href="#schedule" style="text-align: left;"></a>
+      <p id="schedule" href="#schedule" class="round-title" style="text-align: left;">SCHEDULE</p>
       <div class="row justify-content-center">
         <div class="col-sm">
           <table class="table">
