--- a/tournaments/wc2021.html
+++ b/tournaments/wc2021.html
@@ -172,34 +172,49 @@
           <table class="table">
             <thead>
               <tr>
-                <th>RANK</th>
-                <th>COUNTRY</th>
-                <th>POINTS</th>
+                <th>TEAM</th>
+                <th>MP</th>
+                <th>W</th>
+                <th>D</th>
+                <th>L</th>
+                <th>PTS</th>
                 <th>TB</th>
               </tr>
             </thead>
             <tbody>
               <tr>
-                <td>1</td>
                 <td>USA</td>
                 <td>0</td>
                 <td>0</td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
               </tr>
               <tr>
-                <td>2</td>
                 <td>ITA</td>
                 <td>0</td>
                 <td>0</td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
               </tr>
               <tr>
-                <td>3</td>
                 <td>KOR</td>
                 <td>0</td>
                 <td>0</td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
               </tr>
               <tr>
-                <td>4</td>
                 <td>BRA</td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
                 <td>0</td>
                 <td>0</td>
               </tr>
@@ -211,34 +226,49 @@
           <table class="table text-center">
             <thead>
               <tr>
-                <th>RANK</th>
-                <th>COUNTRY</th>
-                <th>POINTS</th>
+                <th>TEAM</th>
+                <th>MP</th>
+                <th>W</th>
+                <th>D</th>
+                <th>L</th>
+                <th>PTS</th>
                 <th>TB</th>
               </tr>
             </thead>
             <tbody>
               <tr>
-                <td>1</td>
                 <td>ENG</td>
                 <td>0</td>
                 <td>0</td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
               </tr>
               <tr>
-                <td>2</td>
                 <td>FRA</td>
                 <td>0</td>
                 <td>0</td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
               </tr>
               <tr>
-                <td>3</td>
                 <td>CHN</td>
                 <td>0</td>
                 <td>0</td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
               </tr>
               <tr>
-                <td>4</td>
                 <td>MEX</td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
                 <td>0</td>
                 <td>0</td>
               </tr>
@@ -252,34 +282,49 @@
           <table class="table text-center">
             <thead>
               <tr>
-                <th>RANK</th>
-                <th>COUNTRY</th>
-                <th>POINTS</th>
+                <th>TEAM</th>
+                <th>MP</th>
+                <th>W</th>
+                <th>D</th>
+                <th>L</th>
+                <th>PTS</th>
                 <th>TB</th>
               </tr>
             </thead>
             <tbody>
               <tr>
-                <td>1</td>
                 <td>AUS</td>
                 <td>0</td>
                 <td>0</td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
               </tr>
               <tr>
-                <td>2</td>
                 <td>IND</td>
                 <td>0</td>
                 <td>0</td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
               </tr>
               <tr>
-                <td>3</td>
                 <td>HUN</td>
                 <td>0</td>
                 <td>0</td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
               </tr>
               <tr>
-                <td>4</td>
                 <td>SPA</td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
                 <td>0</td>
                 <td>0</td>
               </tr>
@@ -291,34 +336,49 @@
           <table class="table text-center">
             <thead>
               <tr>
-                <th>RANK</th>
-                <th>COUNTRY</th>
-                <th>POINTS</th>
+                <th>TEAM</th>
+                <th>MP</th>
+                <th>W</th>
+                <th>D</th>
+                <th>L</th>
+                <th>PTS</th>
                 <th>TB</th>
               </tr>
             </thead>
             <tbody>
               <tr>
-                <td>1</td>
                 <td>CAN</td>
                 <td>0</td>
                 <td>0</td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
               </tr>
               <tr>
-                <td>2</td>
                 <td>ISR</td>
                 <td>0</td>
                 <td>0</td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
               </tr>
               <tr>
-                <td>3</td>
                 <td>JAP</td>
                 <td>0</td>
                 <td>0</td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
               </tr>
               <tr>
-                <td>4</td>
                 <td>SWE</td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
                 <td>0</td>
                 <td>0</td>
               </tr>
