--- a/tournaments/wc2021/info.html
+++ b/tournaments/wc2021/info.html
@@ -23,8 +23,8 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
     <style>
-
         .table td {font-family: monospace;border-top: 0px; border-right: 1px solid #dee2e6}
+        a:visited {color: white;}
     </style>
  </head>
  <body>
@@ -550,7 +550,7 @@
       <p id="schedule" href="#schedule" class="round-title" style="text-align: left;">SCHEDULE</p>
       <div class="row justify-content-center">
         <div class="col-sm">
-          <table class="table">
+          <table class="table text-center">
             <thead>
               <tr>
                 <th>DATE</th>
@@ -565,14 +565,14 @@
                 <td>Jan 2nd</td>
                 <td>Group</td>
                 <td>A</td>
-                <td>USA vs ITA</td>
+                <td><a href="https://redd.it/koxsjb" target="_blank"><u>USA vs ITA</u></a></td>
                 <td></td>
               </tr>
               <tr>        
                 <td>Jan 2nd</td>
                 <td>Group</td>
                 <td>B</td>
-                <td>CHN vs MEX</td>
+                <td><a href="https://redd.it/koxsjb" target="_blank"><u>CHN vs MEX</u></a></td>
                 <td></td>
               </tr>
 
