--- a/tournaments/wc2021/info.html
+++ b/tournaments/wc2021/info.html
@@ -580,14 +580,14 @@
                 <td>Jan 6th</td>
                 <td>Group</td>
                 <td>C</td>
-                <td>AUS vs IND</td>
+                <td><a href="https://redd.it/kronxk" target="_blank"><u>AUS vs IND</u></a></td>
                 <td></td>
               </tr>
               <tr>        
                 <td>Jan 6th</td>
                 <td>Group</td>
                 <td>D</td>
-                <td>JAP vs SWE</td>
+                <td><a href="https://redd.it/kronxk" target="_blank"><u>JAP vs SWE</u></a></td>
                 <td></td>
               </tr>
 
