--- a/tournaments/wc2021/info.html
+++ b/tournaments/wc2021/info.html
@@ -566,14 +566,14 @@
                 <td>Group</td>
                 <td>A</td>
                 <td><a href="https://redd.it/koxsjb" target="_blank"><u>USA vs ITA</u></a></td>
-                <td></td>
+                <td>USA</td>
               </tr>
               <tr>        
                 <td>Jan 2nd</td>
                 <td>Group</td>
                 <td>B</td>
                 <td><a href="https://redd.it/koxsjb" target="_blank"><u>CHN vs MEX</u></a></td>
-                <td></td>
+                <td>MEX</td>
               </tr>
 
               <tr>        
