--- a/tournaments/wc2021/info.html
+++ b/tournaments/wc2021/info.html
@@ -581,28 +581,28 @@
                 <td>Group</td>
                 <td>C</td>
                 <td><a href="https://redd.it/kronxk" target="_blank"><u>AUS vs IND</u></a></td>
-                <td></td>
+                <td>AUS</td>
               </tr>
               <tr>        
                 <td>Jan 6th</td>
                 <td>Group</td>
                 <td>D</td>
                 <td><a href="https://redd.it/kronxk" target="_blank"><u>JAP vs SWE</u></a></td>
-                <td></td>
+                <td>SWE</td>
               </tr>
 
               <tr>        
                 <td>Jan 11th</td>
                 <td>Group</td>
                 <td>A</td>
-                <td>KOR vs BRA</td>
+                <td>td><a href="https://redd.it/kv1usj" target="_blank"><u>KOR vs BRA</u></a></td></td>
                 <td></td>
               </tr>
               <tr>        
                 <td>Jan 11th</td>
                 <td>Group</td>
                 <td>B</td>
-                <td>ENG vs FRA</td>
+                <td>td><a href="https://redd.it/kv1usj" target="_blank"><u>ENG vs FRA</u></a></td></td>
                 <td></td>
               </tr>
 
