--- a/tournaments/wc2021/info.html
+++ b/tournaments/wc2021/info.html
@@ -595,14 +595,14 @@
                 <td>Jan 11th</td>
                 <td>Group</td>
                 <td>A</td>
-                <td>td><a href="https://redd.it/kv1usj" target="_blank"><u>KOR vs BRA</u></a></td></td>
+                <td><a href="https://redd.it/kv1usj" target="_blank"><u>KOR vs BRA</u></a></td></td>
                 <td></td>
               </tr>
               <tr>        
                 <td>Jan 11th</td>
                 <td>Group</td>
                 <td>B</td>
-                <td>td><a href="https://redd.it/kv1usj" target="_blank"><u>ENG vs FRA</u></a></td></td>
+                <td><a href="https://redd.it/kv1usj" target="_blank"><u>ENG vs FRA</u></a></td></td>
                 <td></td>
               </tr>
 
