remove images for better loading times, changed fonts

--- a/tournaments/wc2021/info.html
+++ b/tournaments/wc2021/info.html
@@ -21,9 +21,10 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
 
     <style>
-        .table td {font-family: monospace;border-top: 0px; border-right: 1px solid #dee2e6}
+        .table td {font-family: Montserrat;font-size: 14px;border-top: 0px; border-right: 1px solid #dee2e6}
         a:visited {color: white;}
     </style>
  </head>
@@ -58,19 +59,19 @@
               <tbody>
                 <tr>        
                   <td rowspan="0" class="flag-td"><img class="flag-logo" src="https://i.imgur.com/nzBQotR.png" title="USA"></td>
-                  <td>ALEXANDRA DADDARIO (C)</td>
+                  <td>Alexandra Daddario (C)</td>
                   <td>34</td>
                 </tr>
                 <tr>
-                  <td>SCARLETT JOHANSSON</td>
+                  <td>Scarlett Johansson</td>
                   <td>36</td>
                 </tr>
                 <tr>
-                  <td>VICTORIA JUSTICE</td>
+                  <td>Victoria Justice</td>
                   <td>27</td>
                 </tr>
                 <tr>
-                  <td>JESSICA ALBA</td>
+                  <td>Jessica Alba</td>
                   <td>39</td>
                 </tr>
               </tbody>
@@ -88,19 +89,19 @@
                 <tbody>
                   <tr>        
                     <td rowspan="0" class="flag-td"><img class="flag-logo" src="https://i.imgur.com/wjcxnJC.png" title="ENG"></td>
-                    <td>EMMA WATSON (C)</td>
+                    <td>Emma Watson (C)</td>
                     <td>30</td>
                   </tr>
                   <tr>
-                    <td>KATE BECKINSALE</td>
+                    <td>Kate Beckinsale</td>
                     <td>47</td>
                   </tr>
                   <tr>
-                    <td>EMILIA CLARKE</td>
+                    <td>Emilia Clarke</td>
                     <td>34</td>
                   </tr>
                   <tr>
-                    <td>JENNA COLEMAN</td>
+                    <td>Jenna Coleman</td>
                     <td>34</td>
                   </tr>
                 </tbody>
@@ -120,19 +121,19 @@
                 <tbody>
                   <tr>        
                     <td rowspan="0" class="flag-td"><img class="flag-logo" src="https://i.imgur.com/jUfHRHw.png" title="AUS"></td>
-                    <td>MARGOT ROBBIE (C)</td>
+                    <td>Margot Robbie (C)</td>
                     <td>30</td>
                   </tr>
                   <tr>
-                    <td>YVONNE STRAHOVSKI</td>
+                    <td>Yvonne Strahovski</td>
                     <td>38</td>
                   </tr>
                   <tr>
-                    <td>ISLA FISHER</td>
+                    <td>Isla Fisher</td>
                     <td>44</td>
                   </tr>
                   <tr>
-                    <td>ROSE BRYNE</td>
+                    <td>Rose Bryne</td>
                     <td>41</td>
                   </tr>
                 </tbody>
@@ -150,19 +151,19 @@
                   <tbody>
                     <tr>        
                       <td rowspan="0" class="flag-td"><img class="flag-logo" src="https://i.imgur.com/si7yFRI.png" title="CAN"></td>
-                      <td>NINA DOBREV (C)</td>
+                      <td>Nina Dobrev (C)</td>
                       <td>31</td>
                     </tr>
                     <tr>
-                      <td>RACHEL MCADAMS</td>
+                      <td>Rachel Mcadams</td>
                       <td>42</td>
                     </tr>
                     <tr>
-                      <td>ELISHA CUTHBERT</td>
+                      <td>Elisha Cuthbert</td>
                       <td>38</td>
                     </tr>
                     <tr>
-                      <td>COBIE SMULDERS</td>
+                      <td>Cobie Smulders</td>
                       <td>38</td>
                     </tr>
                   </tbody>
@@ -182,19 +183,19 @@
                 <tbody>
                   <tr>        
                     <td rowspan="0" class="flag-td"><img class="flag-logo" src="https://i.imgur.com/jRTLIF2.png" title="IND"></td>
-                    <td>PRIYANKA CHOPRA (C)</td>
+                    <td>Priyanka Chopra (C)</td>
                     <td>38</td>
                   </tr>
                   <tr>
-                    <td>DEEPIKA PADUKONE</td>
+                    <td>Deepika Padukone</td>
                     <td>34</td>
                   </tr>
                   <tr>
-                    <td>DISHA PATANI</td>
+                    <td>Disha Patani</td>
                     <td>28</td>
                   </tr>
                   <tr>
-                    <td>ANUSHKA SHARMA</td>
+                    <td>Anushka Sharma</td>
                     <td>32</td>
                   </tr>
                 </tbody>
@@ -212,19 +213,19 @@
                   <tbody>
                     <tr>        
                       <td rowspan="0" class="flag-td"><img class="flag-logo" src="https://i.imgur.com/J6dS1nK.png" title="SWE"></td>
-                      <td>ALICIA VIKANDER (C)</td>
+                      <td>Alicia Vikander (C)</td>
                       <td>32</td>
                     </tr>
                     <tr>
-                      <td>MALIN AKERMAN</td>
+                      <td>Malin Akerman</td>
                       <td>42</td>
                     </tr>
                     <tr>
-                      <td>REBECCA FERGUSON</td>
+                      <td>Rebecca Ferguson</td>
                       <td>37</td>
                     </tr>
                     <tr>
-                      <td>NOOMI RAPACE</td>
+                      <td>Noomi Rapace</td>
                       <td>40</td>
                     </tr>
                   </tbody>
@@ -244,19 +245,19 @@
                 <tbody>
                   <tr>        
                     <td rowspan="0" class="flag-td"><img class="flag-logo" src="https://i.imgur.com/5gxhc5H.png" title="KOR"></td>
-                    <td>HAN HYO-JOO (C)</td>
+                    <td>Han Hyo-Joo (C)</td>
                     <td>33</td>
                   </tr>
                   <tr>
-                    <td>SONG HYE-KYO</td>
+                    <td>Song Hye-Kyo</td>
                     <td>39</td>
                   </tr>
                   <tr>
-                    <td>BAE SUZY</td>
+                    <td>Bae Suzy</td>
                     <td>26</td>
                   </tr>
                   <tr>
-                    <td>KIM SO-HYUN</td>
+                    <td>Kim So-Hyun</td>
                     <td>21</td>
                   </tr>
                 </tbody>
@@ -274,19 +275,19 @@
                   <tbody>
                     <tr>        
                       <td rowspan="0" class="flag-td"><img class="flag-logo" src="https://i.imgur.com/gLOqbah.png" title="ISR"></td>
-                      <td>NATALIE PORTMAN (C)</td>
+                      <td>Natalie Portman (C)</td>
                       <td>39</td>
                     </tr>
                     <tr>
-                      <td>GAL GADOT</td>
+                      <td>Gal Gadot</td>
                       <td>35</td>
                     </tr>
                     <tr>
-                      <td>BAR REFAELI</td>
+                      <td>Bar Refaeli</td>
                       <td>35</td>
                     </tr>
                     <tr>
-                      <td>YAEL GROBGLAS</td>
+                      <td>Yael Grobglas</td>
                       <td>36</td>
                     </tr>
                   </tbody>
