changed grand finale to finals

--- a/tournaments/wc2021.html
+++ b/tournaments/wc2021.html
@@ -304,7 +304,7 @@
             </div>
             <div class="final current">
                <i class="fa fa-trophy"></i>
-               <div class="round-details">Grand Finale <br/></div>
+               <div class="round-details">Finals <br/></div>
                <ul class ="matchup championship">
                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">&nbsp;<span class="score">&nbsp;</span></a></li>
                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">&nbsp;<span class="score">&nbsp;</span></a></li>
