--- a/tournaments/latenightlegs.html
+++ b/tournaments/latenightlegs.html
@@ -17,6 +17,7 @@
     <link href='https://fonts.googleapis.com/css?family=Kaushan+Script|Herr+Von+Muellerhoff' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Abel' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Istok+Web|Roboto+Condensed:700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
     <title>CelebBattles Late Night Legs 2020</title>
     <link rel="icon" type="image/png" href="favicon.png"/>
 
