wc round update

--- a/tournaments/wc2021/info.html
+++ b/tournaments/wc2021/info.html
@@ -596,29 +596,29 @@
                 <td>Jan 11th</td>
                 <td>Group</td>
                 <td>A</td>
-                <td><a href="https://redd.it/kv1usj" target="_blank"><u>KOR vs BRA</u></a></td></td>
-                <td></td>
+                <td><a href="https://redd.it/kv1usj" target="_blank"><u>KOR vs BRA</u></a></td>
+                <td>BRA</td>
               </tr>
               <tr>        
                 <td>Jan 11th</td>
                 <td>Group</td>
                 <td>B</td>
-                <td><a href="https://redd.it/kv1usj" target="_blank"><u>ENG vs FRA</u></a></td></td>
-                <td></td>
+                <td><a href="https://redd.it/kv1usj" target="_blank"><u>ENG vs FRA</u></a></td>
+                <td>ENG</td>
               </tr>
 
               <tr>        
                 <td>Jan 15th</td>
                 <td>Group</td>
                 <td>C</td>
-                <td>HUN vs SPA</td>
+                <td><a href="https://redd.it/kxu6qq" target="_blank"><u>HUN vs SPA</u></a></td>
                 <td></td>
               </tr>
               <tr>        
                 <td>Jan 15th</td>
                 <td>Group</td>
                 <td>D</td>
-                <td>CAN vs ISR</td>
+                <td><a href="https://redd.it/kxu6qq" target="_blank"><u>CAN vs ISR</u></a></td>
                 <td></td>
               </tr>
 
