--- a/tournaments/wc2021/info.html
+++ b/tournaments/wc2021/info.html
@@ -567,14 +567,14 @@
                 <td>Group</td>
                 <td>A</td>
                 <td><a href="https://redd.it/koxsjb" target="_blank"><u>USA vs ITA</u></a></td>
-                <td>USA</td>
+                <td>USA (4-0)</td>
               </tr>
               <tr>        
                 <td>Jan 2nd</td>
                 <td>Group</td>
                 <td>B</td>
                 <td><a href="https://redd.it/koxsjb" target="_blank"><u>CHN vs MEX</u></a></td>
-                <td>MEX</td>
+                <td>MEX (1-3)</td>
               </tr>
 
               <tr>        
@@ -582,14 +582,14 @@
                 <td>Group</td>
                 <td>C</td>
                 <td><a href="https://redd.it/kronxk" target="_blank"><u>AUS vs IND</u></a></td>
-                <td>AUS</td>
+                <td>AUS (3-1)</td>
               </tr>
               <tr>        
                 <td>Jan 6th</td>
                 <td>Group</td>
                 <td>D</td>
                 <td><a href="https://redd.it/kronxk" target="_blank"><u>JAP vs SWE</u></a></td>
-                <td>SWE</td>
+                <td>SWE (1-3)</td>
               </tr>
 
               <tr>        
@@ -597,14 +597,14 @@
                 <td>Group</td>
                 <td>A</td>
                 <td><a href="https://redd.it/kv1usj" target="_blank"><u>KOR vs BRA</u></a></td>
-                <td>BRA</td>
+                <td>BRA (1-3)</td>
               </tr>
               <tr>        
                 <td>Jan 11th</td>
                 <td>Group</td>
                 <td>B</td>
                 <td><a href="https://redd.it/kv1usj" target="_blank"><u>ENG vs FRA</u></a></td>
-                <td>ENG</td>
+                <td>ENG (4-0)</td>
               </tr>
 
               <tr>        
