--- a/tournaments/wc2021/info.html
+++ b/tournaments/wc2021/info.html
@@ -563,14 +563,14 @@
             </thead>
             <tbody>
               <tr>        
-                <td>Jan 2nd</td>
+                <td>Jan 02</td>
                 <td>Group</td>
                 <td>A</td>
                 <td><a href="https://redd.it/koxsjb" target="_blank"><u>USA vs ITA</u></a></td>
                 <td>USA (4-0)</td>
               </tr>
               <tr>        
-                <td>Jan 2nd</td>
+                <td>Jan 02</td>
                 <td>Group</td>
                 <td>B</td>
                 <td><a href="https://redd.it/koxsjb" target="_blank"><u>CHN vs MEX</u></a></td>
@@ -578,14 +578,14 @@
               </tr>
 
               <tr>        
-                <td>Jan 6th</td>
+                <td>Jan 06</td>
                 <td>Group</td>
                 <td>C</td>
                 <td><a href="https://redd.it/kronxk" target="_blank"><u>AUS vs IND</u></a></td>
                 <td>AUS (3-1)</td>
               </tr>
               <tr>        
-                <td>Jan 6th</td>
+                <td>Jan 06</td>
                 <td>Group</td>
                 <td>D</td>
                 <td><a href="https://redd.it/kronxk" target="_blank"><u>JAP vs SWE</u></a></td>
@@ -593,14 +593,14 @@
               </tr>
 
               <tr>        
-                <td>Jan 11th</td>
+                <td>Jan 11</td>
                 <td>Group</td>
                 <td>A</td>
                 <td><a href="https://redd.it/kv1usj" target="_blank"><u>KOR vs BRA</u></a></td>
                 <td>BRA (1-3)</td>
               </tr>
               <tr>        
-                <td>Jan 11th</td>
+                <td>Jan 11</td>
                 <td>Group</td>
                 <td>B</td>
                 <td><a href="https://redd.it/kv1usj" target="_blank"><u>ENG vs FRA</u></a></td>
@@ -608,14 +608,14 @@
               </tr>
 
               <tr>        
-                <td>Jan 15th</td>
+                <td>Jan 15</td>
                 <td>Group</td>
                 <td>C</td>
                 <td><a href="https://redd.it/kxu6qq" target="_blank"><u>HUN vs SPA</u></a></td>
                 <td></td>
               </tr>
               <tr>        
-                <td>Jan 15th</td>
+                <td>Jan 15</td>
                 <td>Group</td>
                 <td>D</td>
                 <td><a href="https://redd.it/kxu6qq" target="_blank"><u>CAN vs ISR</u></a></td>
@@ -623,14 +623,14 @@
               </tr>
 
               <tr>        
-                <td>Jan 19th</td>
+                <td>Jan 19</td>
                 <td>Group</td>
                 <td>A</td>
                 <td>USA vs KOR</td>
                 <td></td>
               </tr>
               <tr>        
-                <td>Jan 19th</td>
+                <td>Jan 19</td>
                 <td>Group</td>
                 <td>B</td>
                 <td>FRA vs MEX</td>
@@ -638,14 +638,14 @@
               </tr>
 
               <tr>        
-                <td>Jan 24th</td>
+                <td>Jan 22</td>
                 <td>Group</td>
                 <td>C</td>
                 <td>AUS vs HUN</td>
                 <td></td>
               </tr>
               <tr>        
-                <td>Jan 24th</td>
+                <td>Jan 22</td>
                 <td>Group</td>
                 <td>D</td>
                 <td>ISR vs SWE</td>
@@ -653,14 +653,14 @@
               </tr>
 
               <tr>        
-                <td>Jan 28th</td>
+                <td>Jan 26</td>
                 <td>Group</td>
                 <td>A</td>
                 <td>ITA vs BRA</td>
                 <td></td>
               </tr>
               <tr>        
-                <td>Jan 28th</td>
+                <td>Jan 26</td>
                 <td>Group</td>
                 <td>B</td>
                 <td>ENG vs CHN</td>
@@ -668,14 +668,14 @@
               </tr>
 
               <tr>        
-                <td>Feb 03rd</td>
+                <td>Jan 30</td>
                 <td>Group</td>
                 <td>C</td>
                 <td>IND vs SPA</td>
                 <td></td>
               </tr>
               <tr>        
-                <td>Feb 03rd</td>
+                <td>Jan 30</td>
                 <td>Group</td>
                 <td>D</td>
                 <td>CAN vs JAP</td>
@@ -683,14 +683,14 @@
               </tr>
 
               <tr>        
-                <td>Feb 07th</td>
+                <td>Feb 03</td>
                 <td>Group</td>
                 <td>A</td>
                 <td>ITA vs KOR</td>
                 <td></td>
               </tr>
               <tr>        
-                <td>Feb 07th</td>
+                <td>Feb 03</td>
                 <td>Group</td>
                 <td>B</td>
                 <td>FRA vs CHN</td>
@@ -698,14 +698,14 @@
               </tr>
 
               <tr>        
-                <td>Feb 12th</td>
+                <td>Feb 07</td>
                 <td>Group</td>
                 <td>C</td>
                 <td>IND vs HUN</td>
                 <td></td>
               </tr>
               <tr>        
-                <td>Feb 12th</td>
+                <td>Feb 07</td>
                 <td>Group</td>
                 <td>D</td>
                 <td>ISR vs JAP</td>
@@ -713,14 +713,14 @@
               </tr>
 
               <tr>        
-                <td>Feb 16th</td>
+                <td>Feb 11</td>
                 <td>Group</td>
                 <td>A</td>
                 <td>USA vs BRA</td>
                 <td></td>
               </tr>
               <tr>        
-                <td>Feb 16th</td>
+                <td>Feb 11</td>
                 <td>Group</td>
                 <td>B</td>
                 <td>ENG vs MEX</td>
@@ -728,20 +728,19 @@
               </tr>
 
               <tr>        
-                <td>Feb 24th</td>
+                <td>Feb 15</td>
                 <td>Group</td>
                 <td>C</td>
                 <td>AUS vs SPA</td>
                 <td></td>
               </tr>
               <tr>        
-                <td>Feb 24th</td>
+                <td>Feb 15</td>
                 <td>Group</td>
                 <td>D</td>
                 <td>CAN vs SWE</td>
                 <td></td>
               </tr>
-
             </tbody>
           </table>
         </div>
