--- a/tournaments/wc2021/info.html
+++ b/tournaments/wc2021/info.html
@@ -612,28 +612,28 @@
                 <td>Group</td>
                 <td>C</td>
                 <td><a href="https://redd.it/kxu6qq" target="_blank"><u>HUN vs SPA</u></a></td>
-                <td></td>
+                <td>SPA (0-4)</td>
               </tr>
               <tr>        
                 <td>Jan 15</td>
                 <td>Group</td>
                 <td>D</td>
                 <td><a href="https://redd.it/kxu6qq" target="_blank"><u>CAN vs ISR</u></a></td>
-                <td></td>
+                <td>DRAW (2-2)</td>
               </tr>
 
               <tr>        
                 <td>Jan 19</td>
                 <td>Group</td>
                 <td>A</td>
-                <td>USA vs KOR</td>
+                <td><a href="https://redd.it/l0jhit" target="_blank"><u>USA vs KOR</u></a></td>
                 <td></td>
               </tr>
               <tr>        
                 <td>Jan 19</td>
                 <td>Group</td>
                 <td>B</td>
-                <td>FRA vs MEX</td>
+                <td><a href="https://redd.it/l0jhit" target="_blank"><u>FRA vs MEX</u></a></td>
                 <td></td>
               </tr>
 
