--- a/tournaments/wc2021/info.html
+++ b/tournaments/wc2021/info.html
@@ -641,14 +641,14 @@
                 <td>Jan 22</td>
                 <td>Group</td>
                 <td>C</td>
-                <td>AUS vs HUN</td>
+                <td><a href="https://redd.it/l2nmiy" target="_blank"><u>AUS vs HUN</u></a></td>
                 <td></td>
               </tr>
               <tr>        
                 <td>Jan 22</td>
                 <td>Group</td>
                 <td>D</td>
-                <td>ISR vs SWE</td>
+                <td><a href="https://redd.it/l2nmiy" target="_blank"><u>ISR vs SWE</u></a></td>
                 <td></td>
               </tr>
 
