--- a/tournaments/wc2021/info.html
+++ b/tournaments/wc2021/info.html
@@ -627,14 +627,14 @@
                 <td>Group</td>
                 <td>A</td>
                 <td><a href="https://redd.it/l0jhit" target="_blank"><u>USA vs KOR</u></a></td>
-                <td></td>
+                <td>USA (4-0)</td>
               </tr>
               <tr>        
                 <td>Jan 19</td>
                 <td>Group</td>
                 <td>B</td>
                 <td><a href="https://redd.it/l0jhit" target="_blank"><u>FRA vs MEX</u></a></td>
-                <td></td>
+                <td>DRAW (2-2)</td>
               </tr>
 
               <tr>        
