--- a/tournaments/wc2021/info.html
+++ b/tournaments/wc2021/info.html
@@ -642,28 +642,28 @@
                 <td>Group</td>
                 <td>C</td>
                 <td><a href="https://redd.it/l2nmiy" target="_blank"><u>AUS vs HUN</u></a></td>
-                <td></td>
+                <td>AUS (4-0)</td>
               </tr>
               <tr>        
                 <td>Jan 22</td>
                 <td>Group</td>
                 <td>D</td>
                 <td><a href="https://redd.it/l2nmiy" target="_blank"><u>ISR vs SWE</u></a></td>
-                <td></td>
+                <td>ISR (4-0)</td>
               </tr>
 
               <tr>        
                 <td>Jan 26</td>
                 <td>Group</td>
                 <td>A</td>
-                <td>ITA vs BRA</td>
+                <td><a href="https://redd.it/l5fj1j" target="_blank"><u>ITA vs BRA</u></a></td>
                 <td></td>
               </tr>
               <tr>        
                 <td>Jan 26</td>
                 <td>Group</td>
                 <td>B</td>
-                <td>ENG vs CHN</td>
+                <td><a href="https://redd.it/l5fj1j" target="_blank"><u>ENG vs CHN</u></a></td>
                 <td></td>
               </tr>
 
