--- a/tournaments/wc2021/info.html
+++ b/tournaments/wc2021/info.html
@@ -657,28 +657,28 @@
                 <td>Group</td>
                 <td>A</td>
                 <td><a href="https://redd.it/l5fj1j" target="_blank"><u>ITA vs BRA</u></a></td>
-                <td></td>
+                <td>ITA (3-1)</td>
               </tr>
               <tr>        
                 <td>Jan 26</td>
                 <td>Group</td>
                 <td>B</td>
                 <td><a href="https://redd.it/l5fj1j" target="_blank"><u>ENG vs CHN</u></a></td>
-                <td></td>
+                <td>ENG (4-0)</td>
               </tr>
 
               <tr>        
                 <td>Jan 30</td>
                 <td>Group</td>
                 <td>C</td>
-                <td>IND vs SPA</td>
+                <td><a href="https://redd.it/l9avzs" target="_blank"><u>IND vs SPA</u></a></td>
                 <td></td>
               </tr>
               <tr>        
                 <td>Jan 30</td>
                 <td>Group</td>
                 <td>D</td>
-                <td>CAN vs JAP</td>
+                <td><a href="https://redd.it/l9avzs" target="_blank"><u>CAN vs JAP</u></a></td>
                 <td></td>
               </tr>
 
