--- a/tournaments/wc2021/info.html
+++ b/tournaments/wc2021/info.html
@@ -672,28 +672,28 @@
                 <td>Group</td>
                 <td>C</td>
                 <td><a href="https://redd.it/l9avzs" target="_blank"><u>IND vs SPA</u></a></td>
-                <td></td>
+                <td>SPA (1-3)</td>
               </tr>
               <tr>        
                 <td>Jan 30</td>
                 <td>Group</td>
                 <td>D</td>
                 <td><a href="https://redd.it/l9avzs" target="_blank"><u>CAN vs JAP</u></a></td>
-                <td></td>
+                <td>CAN (4-0)</td>
               </tr>
 
               <tr>        
                 <td>Feb 03</td>
                 <td>Group</td>
                 <td>A</td>
-                <td>ITA vs KOR</td>
+                <td><a href="https://redd.it/lbo00v" target="_blank"><u>ITA vs KOR</u></a></td>
                 <td></td>
               </tr>
               <tr>        
                 <td>Feb 03</td>
                 <td>Group</td>
                 <td>B</td>
-                <td>FRA vs CHN</td>
+                <td><a href="https://redd.it/lbo00v" target="_blank"><u>FRA vs CHN</u></a></td>
                 <td></td>
               </tr>
 
